# Kinect-Motion-Capture

./: CMakeLists.txt  Readme.md
KMotion/: CMakeLists.txt  ControlPosition.cpp  ControlPosition.h  JointSelectionDialog.cpp  JointSelectionDialog.h  Sensor.cpp  Sensor.h  Skeletonthread.cpp  UI_color.cpp  UI_color.h  colorDisplay.cpp  colorDisplay.h  colorthread.cpp  colorthread.h  glWidget.cpp  glWidget.h  limbSelectionDlg.cpp  limbSelectionDlg.h  main.cpp  maindialog.cpp  maindialog.h  maindialog.qrc  maindialog.ui  motion.cpp  motion.h  motionProperties.cpp  motionProperties.h  skeletonthread.h
KMotion/Math/: Quaternion.cpp  Quaternion.h  dualNumber.cpp  dualNumber.h  dualQuaternion.cpp  dualQuaternion.h  hMatrix.cpp  hMatrix.h  hPoint.cpp  hPoint.h  point2D.cpp  point2D.h
